--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@ document.getElementById('stationUrl').value = '';
 });
 &lt;/script&gt;
 &lt;/body&gt;
-&lt;/html&gt;</pre>
+&lt;/html&gt;
+</pre>
 </body>
 </html>
